fixing homepage gap

--- a/css/melp.css
+++ b/css/melp.css
@@ -178,6 +178,7 @@ details > summary::before {
 
 #top-container.homepage {
     border-bottom: unset;
+    gap: 0;
 }
 
 #nav-container {
